fix(be): fix api related admin